<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="android.anthor.beertimer.TimerActivity"
                android:background="@color/base">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_sensor"
            android:text="@string/txt_senon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/text_sensor"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/tv_Timer"
            android:text="@string/timer_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="70dp"
            android:layout_marginTop="125dp"
            android:textColor="@color/text_timer"/>
        <Button
            android:id="@+id/btnStartStop"
            android:text="@string/btnStart"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textColor="@color/text_light"
            android:background="@color/btn_dark"/>
        <Button
            android:id="@+id/btnAgain"
            android:text="@string/btnAgain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_light"
            android:background="@color/btn_dark"
            android:visibility="invisible"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>
