<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="135dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="android.anthor.beertimer.StartActivity"
                android:gravity="center_horizontal"
                android:background="@color/base"
                android:baselineAligned="false">

    <TextView
        android:text="@string/txt_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_dark2"
        android:textSize="50dp"/>
    <TextView
        android:text="@string/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_light2"
        android:textSize="13dp"
        android:paddingTop="100dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:textColor="@color/text_light"
        android:textAlignment="center"
        android:gravity="center"
        android:enabled="true"
        android:hint="name"
        android:ellipsize="start"
        android:singleLine="true"
        android:textColorHint="@color/text_light3"
        />

    <Button
        android:id="@+id/btnOK"
        android:text="@string/btnOK"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_light"
        android:background="@color/btn_dark"/>

</LinearLayout>
